// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Uploader Basic 1`] = `
<div>
  <div
    class="dropzone"
  >
    <input
      accept=""
      multiple="multiple"
      type="file"
    />
    
    Drag and drop one or more files here or
    
    <button
      class="btn btn-primary"
      type="button"
    >
      <span
        class="glyphicon glyphicon-plus"
      />
      
      click to add a file
    
    </button>
     
    <!---->
  </div>
   
  <ul
    class="media-list"
  />
   
  <!---->
   
  <ul
    class="media-list"
  />
   
</div>
`;

exports[`Storyshots Uploader Editable Image 1`] = `
<div
  metadata="[object Object]"
>
  <!---->
   
  <ul
    class="media-list"
  />
   
  <!---->
   
  <ul
    class="media-list"
  >
    <li
      class="media"
      editable="true"
    >
      <!---->
       
      <div
        class="media-body"
      >
        <div
          class="progress"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="progress-bar progress-bar-striped active"
            role="progressbar"
            style="width: 100%;"
          >
            <span
              class="sr-only"
            >
              Loading...
            </span>
          </div>
        </div>
      </div>
       
      <!---->
       
      <!---->
    </li>
  </ul>
   
  <input
    name="media_0"
    type="hidden"
    value="12e68184-5cba-4b27-9988-609a6cc3be63"
  />
</div>
`;

exports[`Storyshots Uploader Limited 1`] = `
<div
  mimetypes="image/png,image/jpeg"
>
  <div
    class="dropzone"
  >
    <input
      accept=""
      multiple="multiple"
      type="file"
    />
    
    Drag and drop one or more files here or
    
    <button
      class="btn btn-primary"
      type="button"
    >
      <span
        class="glyphicon glyphicon-plus"
      />
      
      click to add a file
    
    </button>
     
    <span>
      
      (max size 0o)
    
    </span>
  </div>
   
  <ul
    class="media-list"
  />
   
  <!---->
   
  <ul
    class="media-list"
  />
   
</div>
`;

exports[`Storyshots Uploader Manual Trigger 1`] = `
<div>
  <div
    class="dropzone"
  >
    <input
      accept=""
      multiple="multiple"
      type="file"
    />
    
    Drag and drop one or more files here or
    
    <button
      class="btn btn-primary"
      type="button"
    >
      <span
        class="glyphicon glyphicon-plus"
      />
      
      click to add a file
    
    </button>
     
    <!---->
  </div>
   
  <ul
    class="media-list"
  />
   
  <!---->
   
  <ul
    class="media-list"
  />
   
</div>
`;

exports[`Storyshots Uploader With Existing Value 1`] = `
<div>
  <div
    class="dropzone"
  >
    <input
      accept=""
      multiple="multiple"
      type="file"
    />
    
    Drag and drop one or more files here or
    
    <button
      class="btn btn-primary"
      type="button"
    >
      <span
        class="glyphicon glyphicon-plus"
      />
      
      click to add a file
    
    </button>
     
    <!---->
  </div>
   
  <ul
    class="media-list"
  />
   
  <!---->
   
  <ul
    class="media-list"
  >
    <li
      class="media"
      editable="true"
    >
      <!---->
       
      <div
        class="media-body"
      >
        <div
          class="progress"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="progress-bar progress-bar-striped active"
            role="progressbar"
            style="width: 100%;"
          >
            <span
              class="sr-only"
            >
              Loading...
            </span>
          </div>
        </div>
      </div>
       
      <!---->
       
      <!---->
    </li>
  </ul>
   
  <input
    name="media_0"
    type="hidden"
    value="12e68184-5cba-4b27-9988-609a6cc3be63"
  />
</div>
`;

exports[`Storyshots ViewingModal Landscape 1`] = `
<div
  class="modal fade"
  id="modal-1"
  name="media"
  role="dialog"
  tabindex="-1"
>
  <div
    class="modal-dialog modal-lg"
    role="document"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header"
      >
        <button
          aria-label="Close"
          class="close"
          data-dismiss="modal"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
         
        <h4
          class="modal-title"
        >
          
          test image
        
        </h4>
      </div>
       
      <div
        class="modal-body"
        style="transition: 500ms; overflow: hidden; max-width: 100%; height: auto;"
      >
        <img
          alt="test image"
          class="img-responsive"
          src="./placeholder.jpeg"
          style="transition: 500ms; transform-origin: top center; margin: 0px auto; transform: rotate(0deg); height: auto;"
        />
      </div>
       
      <div
        class="modal-footer"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-10 text-left"
          >
            <button
              class="btn btn-default"
              type="button"
            >
              <i
                class="fas fa-undo"
              />
            </button>
             
            <button
              class="btn btn-default"
              type="button"
            >
              <i
                class="fas fa-redo"
              />
            </button>
             
            <button
              class="btn btn-primary"
              disabled="disabled"
              type="button"
            >
              <i
                class="fas fa-save"
              />
              
              Save
            
            </button>
             
            <!---->
          </div>
           
          <div
            class="col-sm-2 pull-right"
          >
            <button
              class="btn btn-default"
              data-dismiss="modal"
              type="button"
            >
              
              Close
            
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ViewingModal Portrait 1`] = `
<div
  class="modal fade"
  id="modal-1"
  name="media"
  role="dialog"
  tabindex="-1"
>
  <div
    class="modal-dialog modal-lg"
    role="document"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header"
      >
        <button
          aria-label="Close"
          class="close"
          data-dismiss="modal"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
         
        <h4
          class="modal-title"
        >
          
          test image
        
        </h4>
      </div>
       
      <div
        class="modal-body"
        style="transition: 500ms; overflow: hidden; max-width: 100%; height: auto;"
      >
        <img
          alt="test image"
          class="img-responsive"
          src="./portrait.jpeg"
          style="transition: 500ms; transform-origin: top center; margin: 0px auto; transform: rotate(0deg); height: auto;"
        />
      </div>
       
      <div
        class="modal-footer"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-10 text-left"
          >
            <button
              class="btn btn-default"
              type="button"
            >
              <i
                class="fas fa-undo"
              />
            </button>
             
            <button
              class="btn btn-default"
              type="button"
            >
              <i
                class="fas fa-redo"
              />
            </button>
             
            <button
              class="btn btn-primary"
              disabled="disabled"
              type="button"
            >
              <i
                class="fas fa-save"
              />
              
              Save
            
            </button>
             
            <!---->
          </div>
           
          <div
            class="col-sm-2 pull-right"
          >
            <button
              class="btn btn-default"
              data-dismiss="modal"
              type="button"
            >
              
              Close
            
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Visualizer Basic 1`] = `
<ul
  class="media-list"
  metadata="[object Object]"
>
  <li
    class="media"
  >
    <!---->
     
    <div
      class="media-body"
    >
      <div
        class="progress"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="progress-bar progress-bar-striped active"
          role="progressbar"
          style="width: 100%;"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </div>
    </div>
     
    <!---->
     
    <!---->
  </li>
</ul>
`;

exports[`Storyshots Visualizer Empty 1`] = `
<ul
  class="media-list"
/>
`;

exports[`Storyshots Visualizer Image 1`] = `
<ul
  class="media-list"
  metadata="[object Object]"
>
  <li
    class="media"
  >
    <!---->
     
    <div
      class="media-body"
    >
      <div
        class="progress"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="progress-bar progress-bar-striped active"
          role="progressbar"
          style="width: 100%;"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </div>
    </div>
     
    <!---->
     
    <!---->
  </li>
</ul>
`;

exports[`Storyshots Visualizer Loading 1`] = `
<ul
  class="media-list"
  metadata="[object Promise]"
>
  <li
    class="media"
  >
    <!---->
     
    <div
      class="media-body"
    >
      <div
        class="progress"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="progress-bar progress-bar-striped active"
          role="progressbar"
          style="width: 100%;"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </div>
    </div>
     
    <!---->
     
    <!---->
  </li>
</ul>
`;

exports[`Storyshots Visualizer Not Found 1`] = `
<ul
  class="media-list"
  metadata="404"
>
  <li
    class="media"
  >
    <!---->
     
    <div
      class="media-body"
    >
      <div
        class="progress"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="progress-bar progress-bar-striped active"
          role="progressbar"
          style="width: 100%;"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </div>
    </div>
     
    <!---->
     
    <!---->
  </li>
</ul>
`;

exports[`Storyshots Visualizer Pdf 1`] = `
<ul
  class="media-list"
  metadata="[object Object]"
>
  <li
    class="media"
  >
    <!---->
     
    <div
      class="media-body"
    >
      <div
        class="progress"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="progress-bar progress-bar-striped active"
          role="progressbar"
          style="width: 100%;"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </div>
    </div>
     
    <!---->
     
    <!---->
  </li>
</ul>
`;
